5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_588.log
== TEST (2019-03-28 11:26:23) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v //100
notar50 = v // 50
notas10 = v //10

r = notas100 * notas50 * notas10

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = notas100 * notas50 * notas10
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:27:03) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v //100
notas50 = v // 50
notas10 = v //10

r = notas100 * notas50 * notas10

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = notas100 * notas50 * notas10
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:27:14) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v //100
notas50 = v // 50
notas10 = v //10

r = notas100 * notas50 * notas10

print(r)
-- OUTPUT:
16929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:27:58) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v //100
notas50 = v // 50
notas10 = v //10

r = notas100 * notas50 * notas10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:28:50) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v //100 % 100
notas50 = v //50 % 100
notas10 = v //10 % 100

r = notas100 * notas50 * notas10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:51) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 100
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
0
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:30:02) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 100
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
0
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:30:19) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 * 100
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9000
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:30:31) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100  
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
90
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:30:49) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 100
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.20039
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
0
1
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:30:52) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 100
notas50 = v % 100 // 50
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
0
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:31:25) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 100
notas50 = v % 100 
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
0
90
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:31:50) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 
notas50 = v % 100 // 100
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 3
    notas100 = v % 100 // 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:31:59) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 
notas50 = v % 100 // 100
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
90
0
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:32:16) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 1
notas50 = v % 100 // 100
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
90
0
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:32:37) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // v
notas50 = v % 100 // 100
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.267452
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
0
0
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:32:38) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // v
notas50 = v % 100 // 100
notas10 = v % 100 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
0
0
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:33:05) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.215705
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 3
    notas100 = v % 100 // 
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:33:07) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 3
    notas100 = v % 100 // 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:33:14) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
90
0
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:33:33) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 50
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
1
0
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:33:59) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
90
0
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:34:21) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 10
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
0
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:34:32) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 30
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
3
0
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:34:39) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v % 100 // 30
notas50 = v % 100 // 100
notas10 = v % 100 // 10

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.143288
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
3
0
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:35:22) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 100
notas10 = v // 100 % 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:35:45) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 100 % 10

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:35:59) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 100 % 100

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.146467
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
9
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:36:01) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 100 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:36:15) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 100 % 60

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.223086
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
9
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:36:17) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 100 % 60

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:36:43) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 30
notas50 = v // 100 % 50
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:37:18) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 30 % 100
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
33
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:37:50) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 30 % 20
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
13
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:38:00) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 30 % 60
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
33
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:38:16) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.217018
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
9
19
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:38:18) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:38:41) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 100
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:38:54) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:39:05) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 50
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:39:16) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 10
notas10 = v // 50 % 100

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:39:49) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 50
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:40:06) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 100
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.148755
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
19
990
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:40:08) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 100
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:40:21) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 150
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.207404
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
19
990
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:40:24) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 150
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:40:40) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 10
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
9
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:41:39) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 % 50
notas50 = v // 50 % 50
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:38) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v // 50 
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
19
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:59) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v // v
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
1
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:43:18) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v // 
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 4
    notas50 = v // 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:43:25) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v // 
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 4
    notas50 = v // 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:43:29) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v 
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
990
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:26) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v  
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
990
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:39) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v  // 10
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
99
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:56) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v  // v 
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
1
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:45:11) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
notas50 = v  // v / 100
notas10 = v 

print(notas100)
print(notas50)
print(notas10)
-- OUTPUT:
9
0.01
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:43:11) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
resto100 = v % 100
notas50 = resto100 // 50
resto50 = resto 100 % 50
nota10 = resto50 // 10

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 6
    resto50 = resto 100 % 50
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:43:28) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
resto100 = v % 100
notas50 = resto100 // 50
resto50 = resto100 % 50
nota10 = resto50 // 10

print(notas100)
print(notas50)
print(notas10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(notas10)
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:43:45) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
resto100 = v % 100
notas50 = resto100 // 50
resto50 = resto100 % 50
nota10 = resto50 // 10

print(notas100)
print(notas50)
print(nota10)
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:44:46) 
-- CODE:
v = int(input("valor do saque: "))

notas100 = v // 100 
resto100 = v % 100
notas50 = resto100 // 50
resto50 = resto100 % 50
nota10 = resto50 // 10

print(notas100)
print(notas50)
print(nota10)
-- EXECUTION TIME:
0.205047
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
